--- a/src/index.html
+++ b/src/index.html
@@ -92,6 +92,7 @@
     </section>
   </main>
   <footer>&copy;NOT a real business</footer>
+  <script src="./js/main.js" type="module"></script>
 </body>
 
 </html>
