--- a/src/index.html
+++ b/src/index.html
@@ -54,7 +54,7 @@
     </section>
   </main>
   <footer>&copy;NOT a real business</footer>
-  <script src="/src/js/main.js" type="module"></script>
+  <script src="./src/js/main.js" type="module"></script>
 </body>
 
 </html>
