Move script tag

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sleep Outside | Home</title>
   <link rel="stylesheet" href="/css/style.css" />
+  <script src="js/main.js" type="module"></script>
 </head>
 
 <body>
@@ -54,7 +55,7 @@
     </section>
   </main>
   <footer>&copy;NOT a real business</footer>
-  <script src="../src/js/main.js" type="module"></script>
+  
 </body>
 
 </html>
