Complete Team Activity

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
       <h2>Top Products</h2>
       <ul class="product-list">
         <li class="product-card">
-          <a href="product_pages/marmot-ajax-3.html">
+          <a href="product_pages/?product=880RR">
             <img src="images/tents/marmot-ajax-tent-3-person-3-season-in-pale-pumpkin-terracotta~p~880rr_01~320.jpg" alt="Marmot Ajax tent" />
             <h3 class="card__brand">Marmot</h3>
             <h2 class="card__name">Ajax Tent - 3-Person, 3-Season</h2>
@@ -92,7 +92,7 @@
     </section>
   </main>
   <footer>&copy;NOT a real business</footer>
- <script src="../js/main.js" type="module"></script>
+ <script src="/js/main.js" type="module"></script>
 </body>
 
 </html>
