--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -60,7 +60,7 @@
       <section class="products">
         <h2>My Cart</h2>
 
-        <ul class="product-list"></ul>
+        <ul class="cart-product-list"></ul>
 
        <div class="cart-footer hide">
           <p>Total:
