--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -62,10 +62,8 @@
 
         <ul class="cart-product-list"></ul>
 
-       <div class="cart-footer hide">
-          <p>Total:
-            $<span class="cart-total"></span>
-          </p>
+        <div class="cart-footer hide">
+          <p>Total: $<span class="cart-total"></span></p>
         </div>
       </section>
     </main>
@@ -73,4 +71,3 @@
     <footer>&copy;NOT a real business</footer>
   </body>
 </html>
-
